# sky-ai

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
configs/: base.yaml  gpt2-adamw-proxy.yaml  gpt2-bench.yaml  gpt2-muon-proxy.yaml  gpt2-muon.yaml  gpt2.yaml  skyai-124m-validate.yaml  skyai-modern-validate.yaml  skyai-xl.yaml  skyai.yaml  smoke.yaml  sweep-adamw-lr.yaml  sweep-muon-lr.yaml
journal/: 00-gpt-tokenizer.md  01-reproduce-gpt2.md  README.md  lets-build-gpt.md  makemore-activations.md  makemore-backprop.md  makemore-bigrams.md  makemore-mlp.md  makemore-wavenet.md  prereq-3b1b.md  prereq-micrograd.md
notebooks/: 00-makemore-bigrams.ipynb  gpt-tokenizer.ipynb  makemore-activations.ipynb  makemore-backprop.ipynb  makemore-mlp.ipynb  makemore-wavenet.ipynb  play-gpt2.ipynb  prereq-micrograd.ipynb
notebooks/00-lets-build-gpt/: model.py
notebooks/lets-build-gpt/: 10k.txt  generate.py
scripts/: export_hf.py  fineweb.py  hellaswag.py  shard_text.py  train_reference.py
src/gpt/: __init__.py  attention.py  block.py  init.py  mlp.py  model.py
src/harness/: __init__.py  ablation.py  checkpoint.py  log.py  sample.py  wandb_logger.py
src/harness/cli/: doctor.py  main.py
src/harness/config/: loader.py  schema.py
src/harness/data/: loader.py
src/harness/eval/: __init__.py  hellaswag.py  lambada.py  result.py
src/harness/training/: loop.py  optimizer.py  profiler.py  recovery.py
src/skyai/: ablation.py  attention.py  block.py  checkpoint.py  flash.py  generate.py  init.py  layers.py  log.py  mlp.py  model.py  sample.py  wandb_logger.py
src/skyai/cli/: doctor.py  main.py
src/skyai/config/: loader.py  schema.py
src/skyai/data/: __init__.py
tests/: conftest.py  golden_support.py  test_ablation.py  test_checkpoint.py  test_cli.py  test_doctor.py  test_environment.py  test_generate.py  test_golden.py  test_golden_gpt2.py  test_hellaswag.py  test_lambada.py  test_log.py  test_nn.py  test_sample.py  test_shard_text_script.py  test_smoke.py  test_training_loop.py
tests/cli/: test_cli.py  test_doctor.py  test_generate.py  test_sample.py
tests/config/: test_config.py
tests/data/: test_data.py
tests/eval/: test_eval_runner.py  test_hellaswag.py  test_lambada.py
tests/fixtures/: golden_gpt2_short.json  golden_harness_short.json
tests/gpt/: test_attention.py  test_block.py  test_init.py  test_mlp.py  test_model.py  test_pretrained.py
tests/harness/: test_log.py
tests/nn/: test_attention.py  test_block.py  test_flash.py  test_init.py  test_layers.py  test_mlp.py  test_model.py
tests/skyai/: _rope.py  test_attention.py  test_block.py  test_init.py  test_mlp.py  test_model.py
tests/training/: test_ablation.py  test_checkpoint.py  test_profiler.py  test_recovery.py  test_training.py  test_training_loop.py  test_wandb_logger.py
(+30 files in other folders)
