[project]
name = "skyai"
version = "0.1.0"
description = "From-scratch GPT-2 (124M) reproduction following Andrej Karpathy's tutorials"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.5.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "wandb>=0.18",
    "ipykernel>=6.29",
    "transformers>=4.40",
    "datasets>=2.16",
    "regex>=2026.4.4",
    "ipywidgets>=8.1.8",
    "requests>=2.33.1",
    "python-dotenv>=1.2.2",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.scripts]
skyai = "skyai.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skyai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N803",   # Argument name should be lowercase (PyTorch uses B, T, C)
    "N806",   # Variable in function should be lowercase (PyTorch uses B, T, C)
    "N812",   # Lowercase imported as non-lowercase (F for torch.nn.functional)
    "N817",   # camelCase imported as acronym
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]